--- a/themes/san-diego/source/styles/_layout-fixes.scss
+++ b/themes/san-diego/source/styles/_layout-fixes.scss
@@ -288,7 +288,8 @@
 		}
 
 		.content-inner-wrapper {
-			margin: 30px 30px 0;
+			margin: 0 16px;  // Horizontal margin only, no top margin
+			padding-top: 0;
 		}
 	}
 }
